--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>
             Home
         </h1>
-        <section>
+        <section class="section-courseWork">
             <h2>Course Work</h2>
             <ul>
                 <li></li>
@@ -73,20 +73,34 @@
                 <li></li>
             </ul>
         </section>
-        <section>
+        <section class="section-malawi">
             <h2>Lilongwe, Malawi</h2>
-            <img src="#" alt="Malawi" class="malawi-pic">
+            <img 
+                class="zebra"
+                src="images/malawi-zebras.webp" 
+                alt="Zebra"
+                width="auto";
+                loading="lazy">
         </section>
-        <section>
+        <section class="section-certificate">
             <h2>Web and Computer Programming Certificate</h2>
-            <div>
+            <div class="certificate-filter">
                 <ul>
-                    <li>All</li>
-                    <li>CSE</li>
-                    <li>WDD</li>
+                    <li class="cert-filter-item">All</li>
+                    <li class="cert-filter-item">CSE</li>
+                    <li class="cert-filter-item">WDD</li>
                 </ul>
             </div>
-            <div></div>
+            <div>
+                <ul>
+                    <li class="course-item">CSE 110</li>
+                    <li class="course-item">WDD 130</li>
+                    <li class="course-item">CSE 111</li>
+                    <li class="course-item">SCE210</li>
+                    <li class="course-item">WDD 131</li>
+                    <li class="course-item">WDD 231</li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- FOOTER -->
