Sets fixed width for zebra image
Replaces "auto" with a fixed width of 100 for the zebra image.
Improves layout consistency and ensures better rendering across devices.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 class="zebra"
                 src="images/malawi-zebras.webp" 
                 alt="Zebra"
-                width="auto";
+                width="100"
                 loading="lazy">
         </section>
         <section class="section-certificate">
