Refines layout and fixes content inaccuracies
Adjusts image width for better visual scaling
Corrects course name typo in the list
Enhances course list styling with flexbox and consistent spacing
Removes unnecessary height from the main element for layout flexibility

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 class="zebra"
                 src="images/malawi-zebras.webp" 
                 alt="Zebra"
-                width="100"
+                width="500"
                 loading="lazy">
         </section>
         <section class="section-certificate">
@@ -91,12 +91,12 @@
                     <li class="cert-filter-item">WDD</li>
                 </ul>
             </div>
-            <div>
+            <div class="course-list">
                 <ul>
                     <li class="course-item">CSE 110</li>
                     <li class="course-item">WDD 130</li>
                     <li class="course-item">CSE 111</li>
-                    <li class="course-item">SCE210</li>
+                    <li class="course-item">CSE 210</li>
                     <li class="course-item">WDD 131</li>
                     <li class="course-item">WDD 231</li>
                 </ul>
