Updates image references and improves layout styling
Renames profile image to use consistent lowercase naming.
Replaces Malawi zebras image container with a figure and caption for better semantic structure.
Adjusts secondary color and layout margins in CSS for improved visual consistency.
Adds a certificate filter section with responsive styling.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <div class="navigation">
             <div class="profile">
-                <img src="images/Michael-Kazembe.webp" alt="profile picture" class="profile-pic" width="auto" height="100">
+                <img src="images/michael-kazembe.webp" alt="profile picture" class="profile-pic" width="auto" height="100">
                 <span>Michael Kazembe</span>
             </div>
 
@@ -75,12 +75,11 @@
         </section>
         <section class="section-malawi">
             <h2>Lilongwe, Malawi</h2>
-            <img 
-                class="zebra"
-                src="images/malawi-zebras.webp" 
-                alt="Zebra"
-                width="500"
-                loading="lazy">
+            <figure>
+                <img src="images/malawi-zebras.webp" alt="Zebra" style="width: 100%; height: auto;">
+                <figcaption>Zebras grazing in the wilds of Malawi.</figcaption>
+            </figure>
+
         </section>
         <section class="section-certificate">
             <h2>Web and Computer Programming Certificate</h2>
