Removes redundant width attribute from profile image
Simplifies the profile image element by removing the unnecessary
width attribute, relying solely on the height to maintain aspect ratio.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <div class="navigation">
             <div class="profile">
-                <img src="images/michael-kazembe.webp" alt="profile picture" class="profile-pic" width="auto" height="100">
+                <img src="images/michael-kazembe.webp" alt="profile picture" class="profile-pic" height="100">
                 <span>Michael Kazembe</span>
             </div>
 
