--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
                 <li></li>
             </ul>
         </section>
+        <!-- Malawi -->
         <section class="section-malawi">
             <h2>Lilongwe, Malawi</h2>
             <figure>
-                <img src="images/malawi-zebras.webp" alt="Zebra" style="width: 100%; height: auto;">
+                <img class="zebra-img" src="images/malawi-zebras.webp" alt="Zebra">
                 <figcaption>Zebras grazing in the wilds of Malawi.</figcaption>
             </figure>
 
