Renames certificate section elements and improves layout
Updates naming conventions for the certificate section to align with "course" terminology. Enhances layout and styling for better responsiveness, consistency, and readability, including adjustments to padding, dimensions, and alignment. Refactors CSS classes for improved clarity and maintainability.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             </figure>
 
         </section>
+        <!-- Certificate -->
         <section class="section-certificate">
             <h2>Web and Computer Programming Certificate</h2>
-            <div class="certificate-filter">
+            <div class="course-filter">
                 <ul>
-                    <li class="cert-filter-item">All</li>
-                    <li class="cert-filter-item">CSE</li>
-                    <li class="cert-filter-item">WDD</li>
+                    <li class="course-filter-item">All</li>
+                    <li class="course-filter-item">CSE</li>
+                    <li class="course-filter-item">WDD</li>
                 </ul>
             </div>
             <div class="course-list">
