Improve image accessibility and refine styles
Adds explicit width and height attributes to an image for
better layout stability. Refines styles by adjusting margins,
font size, and padding for improved spacing and readability.

Minor whitespace cleanup in CSS files for consistency.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="section-malawi">
             <h2>Lilongwe, Malawi</h2>
             <figure>
-                <img class="zebra-img" src="images/malawi-zebras.webp" alt="Zebra">
+                <img class="zebra-img" src="images/malawi-zebras.webp" alt="Zebra" width="300" height="200">
                 <figcaption>Zebras grazing in the wilds of Malawi.</figcaption>
             </figure>
 
