Redesigns footer structure and styles
Replaces the simple footer with a modern, responsive design, including
a logo section, social media links, and a newsletter subscription form.

Updates CSS to style the new footer layout, ensuring responsiveness
and visual consistency across devices. Enhances user engagement
through interactive elements and improved accessibility.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,14 +65,53 @@
         </h1>
 
     </main>
-    <!-- FOOTER -->
-    <footer class="site-footer">
-      <p class="footer-text">
-        &copy; <span id="currentdate"></span> Michael Kazembe 🇲🇼 Malawi, Africa
-      </p>
-      <p id="last-modified" class="footer-modified">
-        Last Modified: <span id="last-modified-date"></span>
-      </p>
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- Logo Section -->
+        <div class="footer-logo">
+          <img
+            src="images/logo-icon-light-transparent.png"
+            alt="Logo"
+            width="100"
+            loading="lazy"
+          >
+        </div>
+
+        <!-- Social Media Links -->
+        <div class="footer-social">
+          <h5>Follow Us</h5>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Subscribe Form -->
+        <div class="footer-subscribe">
+          <h4>Subscribe to Our Newsletter</h4>
+          <form action="thank-you.html" method="post" class="subscribe-form">
+            <input type="email" placeholder="Enter your email" required >
+            <button type="submit" class="primary-button">Subscribe</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Copyright Section -->
+      <div class="footer-copyright">
+        &copy;
+        <span id="current-year"></span>
+        Lilongwe Chamber of Commerce. All rights reserved.
+      </div>
     </footer>
 </body>
 </html>
