--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,8 +13,8 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Directory | Malawi Chamber of Commerce">
     <meta property="og:description" content="Discover businesses and organizations in the Malawi Chamber of Commerce directory.">
-    <meta property="og:image" content="https://michaelkazembe.github.io/chamber/images/logo-1-primary.png">
-    <meta property="og:url" content="https://michaelkazembe.github.io/chamber/directory.html">
+    <meta property="og:image" content="https://michaelkazembe.github.io/wdd321/chamber/images/logo-1-primary.png">
+    <meta property="og:url" content="https://michaelkazembe.github.io/wdd321/chamber/directory.html">
     <meta property="og:type" content="website">
 
     <!-- CSS Files -->
