Update metadata, assets, and styling for improved consistency
Revises Open Graph metadata URLs for accuracy and updates logo
references to reflect new asset paths. Simplifies and enhances
HTML structure, including footer details and header content.

Modernizes CSS by introducing variable-based styling for greater
scalability and consistency, removing redundant rules, and adding
new footer styles. Deletes unused image assets to reduce clutter
and improve project organization.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,8 +13,8 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Directory | Malawi Chamber of Commerce">
     <meta property="og:description" content="Discover businesses and organizations in the Malawi Chamber of Commerce directory.">
-    <meta property="og:image" content="https://michaelkazembe.github.io/wdd321/chamber/images/logo-1-primary.png">
-    <meta property="og:url" content="https://michaelkazembe.github.io/wdd321/chamber/directory.html">
+    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/chamber/images/logo-1-primary.png">
+    <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/chamber/directory.html">
     <meta property="og:type" content="website">
 
     <!-- CSS Files -->
@@ -40,7 +40,7 @@
     <header>
         <nav class="navBar">
              <div class="logo">
-                <img src="images/logo-dark-transparent.png" alt="logo" class="logo-img" width="200"> 
+                <img src="images/dark-transparent.png" alt="logo" class="logo-img" width="200"> 
             </div>
             <ul id="menu-list">
                 <li><a href="index.html">Home</a></li>
@@ -60,17 +60,14 @@
 
     </header>
     <main>
-        <h1>
-            Directory
-        </h1>
-
+        <h1>Directory</h1>
     </main>
     <footer class="footer">
       <div class="footer-container">
         <!-- Logo Section -->
         <div class="footer-logo">
           <img
-            src="images/logo-icon-light-transparent.png"
+            src="images/icon-dark-transparent.png"
             alt="Logo"
             width="100"
             loading="lazy"
@@ -105,13 +102,15 @@
           </form>
         </div>
       </div>
-
-      <!-- Copyright Section -->
-      <div class="footer-copyright">
-        &copy;
-        <span id="current-year"></span>
-        Lilongwe Chamber of Commerce. All rights reserved.
-      </div>
+      <!-- My Details -->
+       <div class="footer-details">
+            <p class="footer-text">
+            &copy; <span id="currentdate"></span> Michael Kazembe 🇲🇼 Malawi, Africa
+            </p>
+            <p id="last-modified" class="footer-modified">
+        Last Modified: <span id="last-modified-date"></span>
+            </p>
+       </div>
     </footer>
 </body>
 </html>
