Add directory view toggle with list and grid options
Introduces a toggle feature in the directory section to switch between list and grid views. Adds corresponding buttons with styles and hover effects to enhance usability and user experience.

Updates footer background color to use the primary color variable for consistency.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -61,6 +61,21 @@
     </header>
     <main>
         <h1>Directory</h1>
+        <p>Explore our directory of businesses and organizations within Lilongwe.</p>
+        <!-- Menu View -->
+        <div class="directory-view-toggle">
+          <!-- List View -->
+          <button type="button" class="view-btn" id="list-view-btn" aria-label="List View">
+            <i class="fa-solid fa-list"></i>
+            <span>List View</span>
+          </button>
+          <!-- Grid View -->
+          <button type="button" class="view-btn" id="grid-view-btn" aria-label="Grid View">
+            <i class="fa-solid fa-th"></i>
+            <span>Grid View</span>
+          </button>
+        </div>
+
     </main>
     <footer class="footer">
       <div class="footer-container">
