--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,8 +29,7 @@
     
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
-    <script src="scripts/course.js" defer></script>
-    <script src="scripts/date.js" defer></script>
+    <script src="scripts/members.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous"></script>
@@ -75,6 +74,11 @@
             <span>Grid View</span>
           </button>
         </div>
+        <!-- Directory List -->
+        <section class="directory-list" id="directory-list">
+            <!-- Add Directory list Dynamically -->
+
+        </section>
 
     </main>
     <footer class="footer">
