Enhances business directory with new data and UI improvements
Replaces outdated member data with updated entries, adding new
categories and attributes like star ratings. Updates UI/UX for
the business directory, improving grid and list views, and
ensuring better responsiveness. Introduces styling updates
for better readability and accessibility, along with a new
script for date handling.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,6 +30,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/members.js" defer></script>
+    <script src="scripts/date.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous"></script>
@@ -59,10 +60,11 @@
 
     </header>
     <main>
-        <h1>Directory</h1>
-        <p>Explore our directory of businesses and organizations within Lilongwe.</p>
+        <h1>Business Directory</h1>
+        <p>Discover and connect with Lilongwe's diverse business community.</p>
         <!-- Menu View -->
         <div class="directory-view-toggle">
+        
           <!-- List View -->
           <button type="button" class="view-btn" id="list-view-btn" aria-label="List View">
             <i class="fa-solid fa-list"></i>
