Enhances navigation and footer responsiveness
Improves navigation bar accessibility by adding tabindex and
ARIA attributes. Refines navigation styling for better hover
and active states. Adds responsive behavior for mobile and
tablet viewports, including collapsible menus.

Adjusts footer layout and styling for smaller screens, moving
certain styles to a new stylesheet for targeted responsiveness.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,26 +38,25 @@
 </head>
 <body>
     <header>
-        <nav class="navBar">
-             <div class="logo">
-                <img src="images/dark-transparent.png" alt="logo" class="logo-img" width="200"> 
-            </div>
-            <ul id="menu-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover Lilongwe</a></li>
-                <li><a href="directory.html" class="active">Directory</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="join.html">Join Us</a></li>
-            </ul>
-            <div>
-                <i id="menu-icon" class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-                <i id="close-icon" class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
-            </div>
-        </nav>
-
+      <nav class="navBar">
+        <div class="logo">
+          <img src="images/dark-transparent.png" alt="logo" class="logo-img" width="200">
+        </div>
+        <ul id="menu-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover Lilongwe</a></li>
+          <li><a href="directory.html" class="active">Directory</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="join.html">Join Us</a></li>
+        </ul>
+        <div>
+          <i id="menu-icon" class="fa-solid fa-bars" tabindex="0" aria-label="Open menu" onclick="toggleMenu()"></i>
+          <i id="close-icon" class="fa-solid fa-xmark" tabindex="0" aria-label="Close menu" onclick="toggleMenu()"></i>
+        </div>
+      </nav>
     </header>
     <main>
         <h1>Business Directory</h1>
