Update member data and improve footer consistency
Updates URLs and website fields in the members' JSON data to enhance accuracy and completeness. Adjusts footer headings in the HTML to use paragraph tags for style consistency. Adds a fixed width to footer logo images and ensures consistent styling of footer text in the CSS.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -96,7 +96,7 @@
 
         <!-- Social Media Links -->
         <div class="footer-social">
-          <h5>Follow Us</h5>
+          <p>Follow Us</p>
           <ul class="social-links">
             <li>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -115,7 +115,7 @@
 
         <!-- Subscribe Form -->
         <div class="footer-subscribe">
-          <h4>Subscribe to Our Newsletter</h4>
+          <p>Subscribe to Our Newsletter</p>
           <form action="thank-you.html" method="post" class="subscribe-form">
             <input type="email" placeholder="Enter your email" required >
             <button type="submit" class="primary-button">Subscribe</button>
