Updates members data and refines UI elements
Removes outdated entries and adds new members to the dataset,
including businesses in agriculture, energy, and healthcare sectors,
to enhance directory accuracy and relevance.

Optimizes image dimensions and adds lazy loading for improved performance
and accessibility in the directory UI.

Refines CSS by removing redundant width property for footer logos.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
     <header>
       <nav class="navBar">
         <div class="logo">
-          <img src="images/dark-transparent.png" alt="logo" class="logo-img" width="200">
+          <img src="images/dark-transparent.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html">Home</a></li>
@@ -89,7 +89,8 @@
           <img
             src="images/icon-dark-transparent.png"
             alt="Logo"
-            width="100"
+            width="75"
+            height="75"
             loading="lazy"
           >
         </div>
