--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navBar">
             <ul id="menu-list">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="chamber.html">Chamber</a></li>
+                <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="final.html">Final</a></li>
                 <li><a href="https://github.com/MichaelKazembe">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/michael-kazembe/">LinkedIn</a></li>
