Enhances UI and functionality of weather and course sections
Improves weather section visuals with updated styles and icon sizes. Refines text formatting and layout for better readability. Introduces a modal dialog for course details, enhancing user experience and interactivity. Updates styles for consistency in buttons and dialog elements.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <button class="course-filter-item" id="filter-cse">CSE</button>
                 <button class="course-filter-item" id="filter-wdd">WDD</button>
             </div>
+            <!-- Dialog element with course details -->
+            <dialog id="course-details"></dialog>
+            <!-- Course list -->
             <div class="course-list" id="course-list">
                 <!-- Courses will be dynamically inserted here -->
             </div>
@@ -82,6 +85,8 @@
                 Total Credits: <span id="total-credits">0</span>
             </div>
         </section>
+
+
 
     </main>
     <!-- FOOTER -->
