--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,6 +31,7 @@
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/events.js" defer></script>
     <script src="scripts/weather.js" defer></script>
+    <script src="scripts/spotlight.js" defer></script>
     <script src="scripts/date.js" defer></script>
 
     <!-- Icons -->
@@ -79,6 +80,10 @@
       <!-- ========== WEATHER SECTION ========== --> 
       <section class="weather-section" aria-label="Weather in Lilongwe">
         <!-- Insert Current Weather data for Lilongwe -->
+      </section>
+      <!-- ========== SPOTLIGHT SECTION ========== -->
+      <section class="spotlight" aria-label="Spotlight Members">
+        <!-- Insert spotlight members randomly -->
       </section>
       
     </main>
