Standardizes website URLs and enhances spotlight feature
Updates member JSON file to remove 'https://' prefix from website URLs for consistency.

Improves spotlight functionality to always select exactly three members and ensures proper rendering of spotlight cards.

Refines styles for spotlight section and cards, enhancing visual alignment and usability.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -83,6 +83,7 @@
       </section>
       <!-- ========== SPOTLIGHT SECTION ========== -->
       <section class="spotlight" aria-label="Spotlight Members">
+        <h2>Spotlight Members</h2>
         <!-- Insert spotlight members randomly -->
       </section>
       
