--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Directory of Chamber of Commerce">
     <meta name="author" content="Michael Kazembe">
-    <title>Directory | Malawi Chamber of Commerce</title>
+    <title>Home | Malawi Chamber of Commerce</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo-favicon.png" sizes="16x16">
