--- a/chamber/thank-you.html
+++ b/chamber/thank-you.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/form.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,6 +31,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/thank-you.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
@@ -49,7 +51,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="join.html" class="active">Join Us</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
         <div>
           <i id="menu-icon" class="fa-solid fa-bars" tabindex="0" onclick="toggleMenu()"></i>
@@ -57,8 +59,8 @@
         </div>
       </nav>
     </header>
-    <main>Thank You For Registering</h1>
-        <div id="thank-you"></div>
+    <main>
+      <div id="thank-you"></div>
 
     </main>
     <footer class="footer">
