Updates form action URL and removes thank-you page
Standardizes form action URL for consistency and removes the unused thank-you page. Adjusts styling for thank-you section to utilize secondary color.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -65,7 +65,7 @@
         <h2>Join the Malawi Chamber of Commerce</h2>
         <p>Fill out the form below to register your business or organization with the Malawi Chamber of Commerce. Membership is free for NGOs.</p>
 
-        <form action="thank-you.html" method="GET" class="join-form">
+        <form action="thankyou.html" method="GET" class="join-form">
           <label for="firstName">First Name</label>
           <input 
             type="text" 
