--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -31,7 +31,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
-    <script src="scripts/thank-you.js" defer></script>
+    <script src="scripts/thankyou.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
