Updates favicon syntax, removes unused script, and refines styles
- Corrects the favicon syntax in the HTML for consistency.
- Removes the obsolete `thankyou.js` script and its related functionality.
- Improves CSS readability by adding spaces in box-shadow values and addressing minor formatting inconsistencies.
- Cleans up styles related to the thank-you section and introduces new class definitions (`.time`, `.recorded`) for better organization.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -8,7 +8,7 @@
     <title>Join | Malawi Chamber of Commerce</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/logo-favicon.png" sizes="16x16">
+    <link rel="icon" href="images/logo-favicon.png" type="image/png" sizes="16x16">
 
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Directory | Malawi Chamber of Commerce">
@@ -31,6 +31,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/thankyou.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
